Add compiler plugin for Lombok fix