@@ -63,10 +63,32 @@
     <artifactId>json</artifactId>
     <version>20231013</version>
 </dependency>
-
-
-
 </dependencies>
-  
-  
-</project>
+<build>
+  <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.11.0</version>
+      <configuration>
+        <source>17</source>
+        <target>17</target>
+
+        <compilerArgs>
+          <arg>--add-exports</arg>
+          <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+        </compilerArgs>
+
+        <annotationProcessorPaths>
+          <path>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.32</version>
+          </path>
+        </annotationProcessorPaths>
+
+      </configuration>
+    </plugin>
+  </plugins>
+</build>
+  </project>
